[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/altas/player/player_default.tres" type="Texture" id=1]
[ext_resource path="res://sigletons/manager_scene/load_screen/scripts/load_screen.gd" type="Script" id=2]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "player_effect"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1.86607, 1, 0.535887, 1, 2.46229 ),
"update": 0,
"values": [ 0.0, 35.0, 0.0, -35.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 0.594604, 1, 1, 1, 1.56917 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="load_screen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="load_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "PanelSolid"

[node name="padding" type="MarginContainer" parent="load_screen/PanelContainer"]
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="load_screen/PanelContainer/padding"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 170.0
alignment = 2

[node name="percent" type="Label" parent="load_screen/PanelContainer/padding/VBoxContainer"]
margin_top = 123.0
margin_right = 300.0
margin_bottom = 144.0
theme_type_variation = "LabelSubTitle"
text = "0.00%"
align = 1

[node name="loading_bar" type="ProgressBar" parent="load_screen/PanelContainer/padding/VBoxContainer"]
margin_top = 148.0
margin_right = 300.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 10 )
percent_visible = false

[node name="Node2D" type="Node2D" parent="load_screen/PanelContainer/padding/VBoxContainer/loading_bar"]
position = Vector2( 0, 3 )

[node name="player_laoding" type="Sprite" parent="load_screen/PanelContainer/padding/VBoxContainer/loading_bar/Node2D"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )

[node name="effect" type="AnimationPlayer" parent="load_screen/PanelContainer/padding/VBoxContainer/loading_bar/Node2D/player_laoding"]
autoplay = "player_effect"
anims/RESET = SubResource( 5 )
anims/player_effect = SubResource( 4 )

[node name="load_effect" type="Tween" parent="load_screen/PanelContainer/padding/VBoxContainer/loading_bar"]
unique_name_in_owner = true
